# Auto-SRE

./: .coveragerc  .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  Planning.js  README.md  bandit.yaml  docker-compose.test.yml  docker-compose.yml  go.mod  mypy.ini  pytest.ini  requirements-dev.txt  ruff.toml
.github/workflows/: ci.yml
api/: Dockerfile  main.py
auth/: Dockerfile  main.py
cmd/api/: main.go
cmd/network-daemon/: main.go
deployments/docker/: api.Dockerfile  network-daemon.Dockerfile
docs/: README.md  development.md  operations.md  troubleshooting.md
docs/adr/: 0001-why-fastapi.md  0002-why-prometheus.md  0003-why-grafana.md  0004-why-docker-compose.md  0005-why-go-daemon.md  0006-why-circuit-breaker-abstraction.md  README.md
docs/architecture/: README.md
frontend/: index.html  style.css
go-daemon/: Dockerfile  config.yaml  go.mod
prometheus/: prometheus.yml
scripts/: chaos_demo.sh  validate_observability.py
shared/: pyproject.toml
shared/autosre_shared/: __init__.py  app.py  chaos.py  context.py  envcheck.py  logging.py
shared/autosre_shared/clients/: __init__.py  service_client.py
shared/autosre_shared/observability/: __init__.py  endpoints.py  metrics.py  middleware.py
shared/autosre_shared/resilience/: __init__.py  circuit_breaker.py  rate_limiter.py
shared/autosre_shared/storage/: __init__.py  failure_store.py
tests/: Dockerfile  conftest.py  test_alerts.py  test_api.py  test_chaos.py  test_hardening.py  test_health.py  test_metrics.py
worker/: Dockerfile  main.py
(+50 files in other folders)
